moodle/Moodle-on-kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: moodle-elife
  labels:
    app: moodle
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: moodle
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle-elife
  labels:
    app: moodle
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
      tier: frontend
  template:
    metadata:
      labels:
        app: moodle
        tier: frontend
    spec:
      containers:
        - image: jhardison/moodle
          name: moodle
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: moodle-persistent-storage
              mountPath: /var/moodledata
      volumes:
        - name: moodle-persistent-storage
          persistentVolumeClaim:
            claimName: moodle-pv-claim
